anvil: add support for dmabuf feedback
this also removes the egl feature gate from dmabuf
feedback. while it would be possible to remove egl
from the default features we still keep it because
some egl clients still need it (most prominently
nvidia)

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -50,6 +50,6 @@ udev = [
   "smithay/renderer_multi",
   "xcursor",
 ]
-winit = ["smithay/backend_winit"]
-x11 = ["smithay/backend_x11", "x11rb", "egl", "smithay/renderer_gl", "smithay/backend_vulkan"]
-xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source"]
+winit = ["smithay/backend_winit", "smithay/backend_drm"]
+x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
+xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
