--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ x11rb = { version = "0.11.1", optional = true }
 xkbcommon = { version = "0.5.0", features = ["wayland"]}
 scan_fmt = { version = "0.2.3", default-features = false }
 encoding = { version = "0.2.33", optional = true }
+profiling = "1.0"
 
 [dev-dependencies]
 clap = { version = "4", features = ["derive"] }
@@ -124,3 +125,7 @@ required-features = ["backend_drm", "backend_gbm", "backend_egl", "backend_vulka
 [[bench]]
 name = "benchmark"
 harness = false
+
+[profile.release-with-debug]
+inherits = "release"
+debug = true
